# cs190i-projects

./: README.md  dataset.py  resnet18.py  test.py  test_image.py  train.py  utils.py
bert-sarcasm/: README.md  config.py  finetune_full.py  finetune_head_only.py  finetune_lora.py  progress_callback.py  pyproject.toml
bert-sarcasm/results_full/: training_log.txt
bert-sarcasm/results_full/checkpoint-500/: trainer_state.json
bert-sarcasm/results_full/checkpoint-537/: trainer_state.json
bert-sarcasm/results_full/checkpoint-895/: trainer_state.json
bert-sarcasm/results_head/: training_log.txt
bert-sarcasm/results_head/checkpoint-500/: trainer_state.json
bert-sarcasm/results_head/checkpoint-537/: trainer_state.json
bert-sarcasm/results_head/checkpoint-895/: trainer_state.json
bert-sarcasm/results_lora/checkpoint-500/: trainer_state.json
bert-sarcasm/results_lora/checkpoint-537/: trainer_state.json
bert-sarcasm/results_lora/rank16/: training_log.txt
bert-sarcasm/results_lora/rank16/checkpoint-500/: adapter_config.json  trainer_state.json
bert-sarcasm/results_lora/rank16/checkpoint-895/: trainer_state.json
bert-sarcasm/results_lora/rank8/: training_log.txt
bert-sarcasm/results_lora/rank8/checkpoint-500/: trainer_state.json
bert-sarcasm/results_lora/rank8/checkpoint-537/: trainer_state.json
bert-sarcasm/results_lora/rank8/checkpoint-895/: trainer_state.json
metrics/map25/: test_results.txt  training_metrics.txt
metrics/no_aug/: epoch150_noaug.txt  epoch150_train.txt
yolov1/: README.md  requirements.txt
yolov1/data/: train.csv  val.csv
(+3 files in other folders)
